removed position absolute which was causing graphics as pins images to be displayed with a vertical alignment issue

--- a/less/hotgraphic.less
+++ b/less/hotgraphic.less
@@ -160,7 +160,6 @@
 		overflow:hidden;
 		.hotgraphic-graphic-pin-image {
 			display:block;
-			position:absolute;
 			width:100%;
 			height:100%;
 			-webkit-transition: transform .4s;
